fix: createstationdatastorage
